--- a/src/app.css
+++ b/src/app.css
@@ -135,3 +135,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+img {
+  max-width:100%;
+  max-height:100%;
+  pointer-events: none;
+}
